// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPanel > :props > :colorModes[monochrome,linear-gradient] 1`] = `
<div
  class="t-color-picker__panel"
>
  <div
    class="t-color-picker__head"
  >
    <div
      class="t-color-picker__mode"
    >
      <div
        class="t-radio-group t-size-s t-radio-group--filled"
      >
        
        
        <label
          class="t-radio-button t-is-checked"
          tabindex="0"
        >
          <input
            class="t-radio-button__former"
            data-value="'monochrome'"
            name=""
            tabindex="-1"
            type="radio"
            value="monochrome"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            单色
            
            
          </span>
        </label>
        <label
          class="t-radio-button"
          tabindex="0"
        >
          <input
            class="t-radio-button__former"
            data-value="'linear-gradient'"
            name=""
            tabindex="-1"
            type="radio"
            value="linear-gradient"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            渐变
            
            
          </span>
        </label>
        
        
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; height: 0px; left: 0px; top: 0px; transition-property: none;"
        />
      </div>
    </div>
  </div>
  <div
    class="t-color-picker__body"
  >
    <!---->
    <div
      class="t-color-picker__saturation"
      style="background: rgb(0, 0, 0);"
    >
      <span
        class="t-color-picker__thumb"
        role="slider"
        style="color: rgb(0, 31, 151); left: 230px; top: 69px;"
        tabindex="0"
      />
    </div>
    <div
      class="t-color-picker__sliders-wrapper"
    >
      <div
        class="t-color-picker__sliders"
      >
        <div
          class="t-color-picker__slider-wrapper t-color-picker__slider-wrapper--hue-type t-color-picker__hue"
        >
          <!---->
          <div
            class="t-color-picker__slider"
          >
            <div
              class="t-color-picker__rail"
            />
            <span
              class="t-color-picker__thumb"
              role="slider"
              style="left: 63%; color: rgb(0, 0, 0);"
              tabindex="0"
            />
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-color-picker__sliders-preview t-color-picker--bg-alpha"
      >
        <span
          class="t-color-picker__sliders-preview-inner"
          style="background: rgb(0, 31, 151);"
        />
      </div>
    </div>
    <div
      class="t-color-picker__format"
    >
      <div
        class="t-color-picker__format--item"
      >
        <div
          class="t-select__wrap t-color-picker__format-mode-select"
        >
          <div
            class="t-select-input t-select"
          >
            
            <div
              class="t-input__wrap"
            >
              <div
                class="t-input t-size-s t-is-readonly t-input--suffix"
              >
                <!---->
                <!---->
                <input
                  class="t-input__inner"
                  placeholder="请选择"
                  readonly=""
                  spellcheck="false"
                  type="text"
                  unselectable="on"
                />
                <!---->
                <!---->
                <!---->
                <span
                  class="t-input__suffix t-input__suffix-icon"
                >
                  <svg
                    class="t-fake-arrow t-select__right-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                      stroke="black"
                      stroke-opacity="0.9"
                      stroke-width="1.3"
                    />
                  </svg>
                </span>
              </div>
              <!---->
            </div>
            <!---->
            
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-color-picker__format--item"
      >
        <div
          class="input-group"
        >
          
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="0"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="31"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="151"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
    <div
      class="t-color-picker__swatches-wrap"
    >
      <div
        class="t-color-picker__swatches"
      >
        <h3
          class="t-color-picker__swatches--title"
        >
          <span>
            最近使用颜色
          </span>
          <div
            class="t-color-picker__swatches--actions"
          >
            <span
              class="t-color-picker__icon"
              role="button"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <!---->
          </div>
        </h3>
        <ul
          class="t-color-picker__swatches--items narrow-scrollbar"
        >
          
          
        </ul>
      </div>
      <div
        class="t-color-picker__swatches"
      >
        <h3
          class="t-color-picker__swatches--title"
        >
          <span>
            系统预设颜色
          </span>
          <!---->
        </h3>
        <ul
          class="t-color-picker__swatches--items narrow-scrollbar"
        >
          
          <li
            class="t-color-picker__swatches--item"
            title="#ECF2FE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(236, 242, 254);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#D4E3FC"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(212, 227, 252);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#BBD3FB"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(187, 211, 251);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#96BBF8"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(150, 187, 248);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#699EF5"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(105, 158, 245);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#4787F0"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(71, 135, 240);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#266FE8"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(38, 111, 232);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#0052D9"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 82, 217);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#0034B5"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 52, 181);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#001F97"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 31, 151);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#FDECEE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(253, 236, 238);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F9D7D9"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(249, 215, 217);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F8B9BE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(248, 185, 190);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F78D94"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(247, 141, 148);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F36D78"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(243, 109, 120);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#E34D59"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(227, 77, 89);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#C9353F"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(201, 53, 63);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#B11F26"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(177, 31, 38);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#951114"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(149, 17, 20);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#680506"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(104, 5, 6);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#FEF3E6"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(254, 243, 230);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F9E0C7"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(249, 224, 199);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F7C797"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(247, 199, 151);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F2995F"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(242, 153, 95);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#ED7B2F"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(237, 123, 47);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#D35A21"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(211, 90, 33);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#BA431B"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(186, 67, 27);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#9E3610"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(158, 54, 16);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#842B0B"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(132, 43, 11);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#5A1907"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(90, 25, 7);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#E8F8F2"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(232, 248, 242);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#BCEBDC"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(188, 235, 220);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#85DBBE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(133, 219, 190);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#48C79C"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(72, 199, 156);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#00A870"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 168, 112);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#078D5C"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(7, 141, 92);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#067945"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(6, 121, 69);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#056334"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(5, 99, 52);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#044F2A"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(4, 79, 42);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#033017"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(3, 48, 23);"
              />
            </div>
          </li>
          
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`ColorPanel > :props > :colorModes[monochrome,linear-gradient] 2`] = `
<div
  class="t-color-picker__panel"
>
  <!---->
  <div
    class="t-color-picker__body"
  >
    <div
      class="t-color-picker__gradient"
    >
      <div
        class="t-color-picker__gradient-slider"
      >
        <div
          class="t-color-picker__slider t-color-picker--bg-alpha"
          tabindex="0"
        >
          <ul
            class="gradient-thumbs"
          >
            
            <li
              class="t-color-picker__thumb gradient-thumbs__item t-is-active"
              style="color: rgb(241, 29, 0); left: 0%;"
              title="rgb(241, 29, 0) 0%"
            >
              <span
                class="gradient-thumbs__item-inner t-color-picker--bg-alpha"
              />
            </li>
            <li
              class="t-color-picker__thumb gradient-thumbs__item"
              style="color: rgb(73, 106, 220); left: 100%;"
              title="rgb(73, 106, 220) 100%"
            >
              <span
                class="gradient-thumbs__item-inner t-color-picker--bg-alpha"
              />
            </li>
            
          </ul>
        </div>
      </div>
      <div
        class="t-color-picker__gradient-degree"
        title="90deg"
      >
        <div
          class="t-input-number t-size-s t-input-number--normal"
        >
          <!---->
          <div
            class="t-input__wrap"
            unselectable="off"
          >
            <div
              class="t-input"
            >
              <!---->
              <!---->
              <input
                autocomplete="off"
                class="t-input__inner"
                placeholder="请输入"
                spellcheck="false"
                type="text"
                unselectable="off"
              />
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="t-color-picker__gradient-preview t-color-picker--bg-alpha"
      >
        <span
          class="preview-inner"
        />
      </div>
    </div>
    <div
      class="t-color-picker__saturation"
      style="background: rgb(199, 255, 0);"
    >
      <span
        class="t-color-picker__thumb"
        role="slider"
        style="color: rgb(241, 29, 0); left: 230px; top: 9px;"
        tabindex="0"
      />
    </div>
    <div
      class="t-color-picker__sliders-wrapper"
    >
      <div
        class="t-color-picker__sliders"
      >
        <div
          class="t-color-picker__slider-wrapper t-color-picker__slider-wrapper--hue-type t-color-picker__hue"
        >
          <!---->
          <div
            class="t-color-picker__slider"
          >
            <div
              class="t-color-picker__rail"
            />
            <span
              class="t-color-picker__thumb"
              role="slider"
              style="left: 2%; color: rgb(199, 255, 0);"
              tabindex="0"
            />
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-color-picker__sliders-preview t-color-picker--bg-alpha"
      >
        <span
          class="t-color-picker__sliders-preview-inner"
        />
      </div>
    </div>
    <div
      class="t-color-picker__format"
    >
      <div
        class="t-color-picker__format--item"
      >
        <div
          class="t-select__wrap t-color-picker__format-mode-select"
        >
          <div
            class="t-select-input t-select"
          >
            
            <div
              class="t-input__wrap"
            >
              <div
                class="t-input t-size-s t-is-readonly t-input--suffix"
              >
                <!---->
                <!---->
                <input
                  class="t-input__inner"
                  placeholder="请选择"
                  readonly=""
                  spellcheck="false"
                  type="text"
                  unselectable="on"
                />
                <!---->
                <!---->
                <!---->
                <span
                  class="t-input__suffix t-input__suffix-icon"
                >
                  <svg
                    class="t-fake-arrow t-select__right-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                      stroke="black"
                      stroke-opacity="0.9"
                      stroke-width="1.3"
                    />
                  </svg>
                </span>
              </div>
              <!---->
            </div>
            <!---->
            
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-color-picker__format--item"
      >
        <div
          class="input-group"
        >
          
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="241"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="29"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="0"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
    <div
      class="t-color-picker__swatches-wrap"
    >
      <div
        class="t-color-picker__swatches"
      >
        <h3
          class="t-color-picker__swatches--title"
        >
          <span>
            最近使用颜色
          </span>
          <div
            class="t-color-picker__swatches--actions"
          >
            <span
              class="t-color-picker__icon"
              role="button"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <!---->
          </div>
        </h3>
        <ul
          class="t-color-picker__swatches--items narrow-scrollbar"
        >
          
          
        </ul>
      </div>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`ColorPanel > :props > :colorModes[monochrome,linear-gradient] 3`] = `
<div
  class="t-color-picker__panel"
>
  <div
    class="t-color-picker__head"
  >
    <div
      class="t-color-picker__mode"
    >
      <div
        class="t-radio-group t-size-s t-radio-group--filled"
      >
        
        
        <label
          class="t-radio-button"
          tabindex="0"
        >
          <input
            class="t-radio-button__former"
            data-value="'monochrome'"
            name=""
            tabindex="-1"
            type="radio"
            value="monochrome"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            单色
            
            
          </span>
        </label>
        <label
          class="t-radio-button t-is-checked"
          tabindex="0"
        >
          <input
            class="t-radio-button__former"
            data-value="'linear-gradient'"
            name=""
            tabindex="-1"
            type="radio"
            value="linear-gradient"
          />
          <span
            class="t-radio-button__input"
          />
          <span
            class="t-radio-button__label"
          >
            
            
            渐变
            
            
          </span>
        </label>
        
        
        <div
          class="t-radio-group__bg-block"
          style="width: 0px; height: 0px; left: 0px; top: 0px; transition-property: none;"
        />
      </div>
    </div>
  </div>
  <div
    class="t-color-picker__body"
  >
    <div
      class="t-color-picker__gradient"
    >
      <div
        class="t-color-picker__gradient-slider"
      >
        <div
          class="t-color-picker__slider t-color-picker--bg-alpha"
          tabindex="0"
        >
          <ul
            class="gradient-thumbs"
          >
            
            <li
              class="t-color-picker__thumb gradient-thumbs__item t-is-active"
              style="color: rgb(79, 172, 254); left: 0%;"
              title="rgb(79, 172, 254) 0%"
            >
              <span
                class="gradient-thumbs__item-inner t-color-picker--bg-alpha"
              />
            </li>
            <li
              class="t-color-picker__thumb gradient-thumbs__item"
              style="color: rgb(0, 242, 254); left: 100%;"
              title="rgb(0, 242, 254) 100%"
            >
              <span
                class="gradient-thumbs__item-inner t-color-picker--bg-alpha"
              />
            </li>
            
          </ul>
        </div>
      </div>
      <div
        class="t-color-picker__gradient-degree"
        title="45deg"
      >
        <div
          class="t-input-number t-size-s t-input-number--normal"
        >
          <!---->
          <div
            class="t-input__wrap"
            unselectable="off"
          >
            <div
              class="t-input"
            >
              <!---->
              <!---->
              <input
                autocomplete="off"
                class="t-input__inner"
                placeholder="请输入"
                spellcheck="false"
                type="text"
                unselectable="off"
              />
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
            <!---->
          </div>
          <!---->
        </div>
      </div>
      <div
        class="t-color-picker__gradient-preview t-color-picker--bg-alpha"
      >
        <span
          class="preview-inner"
        />
      </div>
    </div>
    <div
      class="t-color-picker__saturation"
      style="background: rgb(0, 0, 0);"
    >
      <span
        class="t-color-picker__thumb"
        role="slider"
        style="color: rgb(79, 172, 254); left: 158px; top: 1px;"
        tabindex="0"
      />
    </div>
    <div
      class="t-color-picker__sliders-wrapper"
    >
      <div
        class="t-color-picker__sliders"
      >
        <div
          class="t-color-picker__slider-wrapper t-color-picker__slider-wrapper--hue-type t-color-picker__hue"
        >
          <!---->
          <div
            class="t-color-picker__slider"
          >
            <div
              class="t-color-picker__rail"
            />
            <span
              class="t-color-picker__thumb"
              role="slider"
              style="left: 58%; color: rgb(0, 0, 0);"
              tabindex="0"
            />
          </div>
        </div>
        <!---->
      </div>
      <div
        class="t-color-picker__sliders-preview t-color-picker--bg-alpha"
      >
        <span
          class="t-color-picker__sliders-preview-inner"
        />
      </div>
    </div>
    <div
      class="t-color-picker__format"
    >
      <div
        class="t-color-picker__format--item"
      >
        <div
          class="t-select__wrap t-color-picker__format-mode-select"
        >
          <div
            class="t-select-input t-select"
          >
            
            <div
              class="t-input__wrap"
            >
              <div
                class="t-input t-size-s t-is-readonly t-input--suffix"
              >
                <!---->
                <!---->
                <input
                  class="t-input__inner"
                  placeholder="请选择"
                  readonly=""
                  spellcheck="false"
                  type="text"
                  unselectable="on"
                />
                <!---->
                <!---->
                <!---->
                <span
                  class="t-input__suffix t-input__suffix-icon"
                >
                  <svg
                    class="t-fake-arrow t-select__right-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
                      stroke="black"
                      stroke-opacity="0.9"
                      stroke-width="1.3"
                    />
                  </svg>
                </span>
              </div>
              <!---->
            </div>
            <!---->
            
            <!---->
          </div>
        </div>
      </div>
      <div
        class="t-color-picker__format--item"
      >
        <div
          class="input-group"
        >
          
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="79"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="172"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="input-group__item"
            style="flex: 1;"
          >
            <div
              class="t-input-number t-size-s t-input-number--normal"
              title="254"
            >
              <!---->
              <div
                class="t-input__wrap"
                unselectable="off"
              >
                <div
                  class="t-input t-align-center"
                >
                  <!---->
                  <!---->
                  <input
                    autocomplete="off"
                    class="t-input__inner"
                    placeholder="请输入"
                    spellcheck="false"
                    type="text"
                    unselectable="off"
                  />
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
    <div
      class="t-color-picker__swatches-wrap"
    >
      <div
        class="t-color-picker__swatches"
      >
        <h3
          class="t-color-picker__swatches--title"
        >
          <span>
            最近使用颜色
          </span>
          <div
            class="t-color-picker__swatches--actions"
          >
            <span
              class="t-color-picker__icon"
              role="button"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M13 4V11L20 11V13L13 13V20H11L11 13H4L4 11L11 11L11 4L13 4Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <!---->
          </div>
        </h3>
        <ul
          class="t-color-picker__swatches--items narrow-scrollbar"
        >
          
          
        </ul>
      </div>
      <div
        class="t-color-picker__swatches"
      >
        <h3
          class="t-color-picker__swatches--title"
        >
          <span>
            系统预设颜色
          </span>
          <!---->
        </h3>
        <ul
          class="t-color-picker__swatches--items narrow-scrollbar"
        >
          
          <li
            class="t-color-picker__swatches--item"
            title="#ECF2FE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(236, 242, 254);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#D4E3FC"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(212, 227, 252);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#BBD3FB"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(187, 211, 251);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#96BBF8"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(150, 187, 248);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#699EF5"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(105, 158, 245);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#4787F0"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(71, 135, 240);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#266FE8"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(38, 111, 232);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#0052D9"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 82, 217);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#0034B5"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 52, 181);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#001F97"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 31, 151);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#FDECEE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(253, 236, 238);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F9D7D9"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(249, 215, 217);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F8B9BE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(248, 185, 190);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F78D94"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(247, 141, 148);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F36D78"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(243, 109, 120);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#E34D59"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(227, 77, 89);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#C9353F"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(201, 53, 63);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#B11F26"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(177, 31, 38);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#951114"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(149, 17, 20);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#680506"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(104, 5, 6);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#FEF3E6"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(254, 243, 230);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F9E0C7"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(249, 224, 199);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F7C797"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(247, 199, 151);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#F2995F"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(242, 153, 95);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#ED7B2F"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(237, 123, 47);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#D35A21"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(211, 90, 33);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#BA431B"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(186, 67, 27);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#9E3610"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(158, 54, 16);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#842B0B"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(132, 43, 11);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#5A1907"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(90, 25, 7);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#E8F8F2"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(232, 248, 242);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#BCEBDC"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(188, 235, 220);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#85DBBE"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(133, 219, 190);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#48C79C"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(72, 199, 156);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#00A870"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(0, 168, 112);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#078D5C"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(7, 141, 92);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#067945"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(6, 121, 69);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#056334"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(5, 99, 52);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#044F2A"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(4, 79, 42);"
              />
            </div>
          </li>
          <li
            class="t-color-picker__swatches--item"
            title="#033017"
          >
            <div
              class="t-color-picker__swatches--color t-color-picker--bg-alpha"
            >
              <span
                class="t-color-picker__swatches--inner"
                style="background: rgb(3, 48, 23);"
              />
            </div>
          </li>
          
        </ul>
      </div>
    </div>
    
  </div>
</div>
`;
